# actix-skel

./: Cargo.toml  README.md  dot.env
src/: db.rs  error.rs  main.rs
src/service/: auth.rs  mod.rs  user.rs
