[package]
name = "actix-skel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tokio = {version="1", features= ["fs", "rt-multi-thread"]}
pg = {package="tokio-postgres", version = "0.7", features = ["with-chrono-0_4"]}
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
deadpool-postgres = "0.14"
dotenv = "0.15"
bytes="1"
env_logger="0.9"
log = "0.4"
derive_more = "0.99"
#actix-multipart = "0.4"
#actix-identity = "0.4"
#futures = "0.3"
#tokio-util = "0.6"
